# jobhunt

./: .env.example  .gitignore  CLAUDE.md  README.md  chatgptplan.md  codex.md  config.local.yaml.example  config.yaml  gemini.md  plan.md  pyproject.toml  setup_browser.py
src/: __main__.py  main.py  orchestrator.py
src/agents/: base.py  config_deriver.py  leadgen.py  matching.py  messaging.py  parsing.py  resume_profiler.py  sourcing.py
src/core/: browser.py  config.py  db.py  embeddings.py  llm.py  roles.py  sheets.py  skills.py  vectorstore.py
src/eval/: eval_matches.py  logger.py  metrics.py  progress.py
src/portals/: __init__.py  base.py  foundit.py  hirist.py  indeed.py  instahyre.py  linkedin.py  linkedin_posts.py  naukri.py  wellfound.py
tests/: conftest.py  test_cli_smoke.py  test_config.py  test_db_security.py  test_main.py  test_matching.py  test_parsing.py  test_roles_and_sourcing.py
